--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net451" />
-  <package id="CSCore" version="1.2.1.2" targetFramework="net451" />
-  <package id="MediaInfo.DotNetWrapper" version="1.0.7" targetFramework="net472" />
-  <package id="MediaInfo.Native" version="17.12" targetFramework="net451" />
+  <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
-  <package id="NVorbis" version="0.8.5.0" targetFramework="net451" />
+  <package id="NVorbis" version="0.8.6" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="WebDAV-Client" version="1.0.3" targetFramework="net472" />
+  <package id="z440.atl.core" version="2.5.0" targetFramework="net472" />
 </packages>
