--- a/test/ConsoleAppPlayer/packages.config
+++ b/test/ConsoleAppPlayer/packages.config
@@ -1,19 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ByteSize" version="1.3.0" targetFramework="net451" />
   <package id="Concentus" version="1.1.7" targetFramework="net472" />
   <package id="Concentus.Oggfile" version="1.0.4" targetFramework="net472" />
   <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
-  <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
-  <package id="NVorbis" version="0.8.6" targetFramework="net472" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
   <package id="System.Console" version="4.0.0" targetFramework="net472" />
@@ -30,10 +24,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.Linq" version="4.1.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
   <package id="System.Net.Http" version="4.1.0" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.0.11" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.1.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.0.12" targetFramework="net472" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
@@ -58,6 +53,5 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net472" />
-  <package id="WebDAV-Client" version="1.0.3" targetFramework="net472" />
-  <package id="z440.atl.core" version="2.6.0" targetFramework="net472" />
+  <package id="z440.atl.core" version="2.5.0" targetFramework="net472" />
 </packages>
