--- a/src/Howler.Blazor/Howler.Blazor.csproj
+++ b/src/Howler.Blazor/Howler.Blazor.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Title>Howler.Blazor</Title>
     <Description>A Blazor JSInterop wrapper for Howler.js</Description>
     <Authors>Stef Heyenrath</Authors>
@@ -22,6 +22,9 @@
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
     <BlazorLinkOnBuild>false</BlazorLinkOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
@@ -32,6 +35,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.JSInterop" Version="3.1.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
