--- a/src/Blazor-WASM-WebDAV-AudioPlayer/Blazor-WASM-WebDAV-AudioPlayer.csproj
+++ b/src/Blazor-WASM-WebDAV-AudioPlayer/Blazor-WASM-WebDAV-AudioPlayer.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
-    <!--<PackageReference Include="WebDAV-Client" Version="1.0.3" />-->
+    <PackageReference Include="WebDAV-Client" Version="1.1.0.0" />
     <PackageReference Include="z440.atl.core" Version="3.3.0" />
   </ItemGroup>
 
@@ -40,8 +40,8 @@
     <Folder Include="Extensions\" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectReference Include="..\..\..\WebDAV-Client\src\WebDAV-Client\WebDAV-Client.csproj" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
