--- a/src/Blazor-WASM-WebDAV-AudioPlayer/Blazor-WASM-WebDAV-AudioPlayer.csproj
+++ b/src/Blazor-WASM-WebDAV-AudioPlayer/Blazor-WASM-WebDAV-AudioPlayer.csproj
@@ -5,7 +5,7 @@
     <RazorLangVersion>3.0</RazorLangVersion>
     <RootNamespace>Blazor.WebDAV.AudioPlayer</RootNamespace>
 
-    <!--<BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>-->
+    <BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,8 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
-    <PackageReference Include="WebDAV-Client" Version="1.1.0.0" />
-    <PackageReference Include="z440.atl.core" Version="3.3.0" />
+    <PackageReference Include="WebDAV-Client" Version="1.1.1.0" />
+    <PackageReference Include="z440.atl.core" Version="3.4.1" />
   </ItemGroup>
 
   <ItemGroup>
