--- a/src/Blazor-WASM-WebDAV-AudioPlayer.v2/Blazor-WASM-WebDAV-AudioPlayer.v2.csproj
+++ b/src/Blazor-WASM-WebDAV-AudioPlayer.v2/Blazor-WASM-WebDAV-AudioPlayer.v2.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="ByteSize" Version="2.0.0" />
     <PackageReference Include="Howler.Blazor" Version="0.9.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
     <PackageReference Include="z440.atl.core" Version="3.4.1" />
@@ -28,6 +29,7 @@
     <Compile Include="..\Blazor-WebDav-FunctionsApp\Models\GetDataResult.cs" Link="Models\GetDataResult.cs" />
     <Compile Include="..\WebDAV-AudioPlayer\Audio\MediaDetails.cs" Link="Audio\MediaDetails.cs" />
     <Compile Include="..\WebDAV-AudioPlayer\Audio\TrackInfoHelper.cs" Link="Audio\TrackInfoHelper.cs" />
+    <Compile Include="..\WebDAV-AudioPlayer\Client\IWebDavClient.cs" Link="Client\IWebDavClient.cs" />
     
     <!--<Compile Include="..\WebDAV-AudioPlayer\Client\IConnectionSettings.cs" Link="Client\IConnectionSettings.cs" />
     <Compile Include="..\WebDAV-AudioPlayer\Client\IWebDavClient.cs" Link="Client\IWebDavClient.cs" />
